[package]
name = "pi_timer"
version = "0.1.1"
authors = ["baip <baip@gmail.com>"]
edition = "2021"
description = "Irrevocable timer"
repository = "https://github.com/GaiaWorld/pi_timer.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "timer"]

[dependencies]
pi_ext_heap = "0.1"
pi_wheel = "0.1"

[dev-dependencies]
pcg_rand = "0.13"
rand_core = "0.6"